--- a/Resume.html
+++ b/Resume.html
@@ -14,13 +14,13 @@
 			<div class="image">
 				<img src=
 "./82433866.jpg"
-					alt="gfg-logo"
+					alt="pro-logo"
 					style="width:100px;height:100px;">
 			</div>
 			<div class="Contact">
 				<h2>Contact</h2>
-				<p><b>Email id:</b>xyz@gmail.com</p>
-				<p><b>Mobile no :</b>1234567890</p>
+				<p><b>Emailid:</b>Pradumnashelge@gmail.com</p>
+				<p><b>Mobile no :</b>9322166695</p>
 			</div>
 			<div class="Skills">
 				<h2>Skills</h2>
@@ -47,6 +47,10 @@
 					<li>Coding</li>
 				</ul>
 			</div>
+			Video:
+			<video autoplay width="320" height="240" controls>
+				<source src="/video.mp4" type="video/mp4">
+			  </video>
 		</div>
 		<div class="right">
 			<div class="name">
@@ -71,6 +75,7 @@
 					design and development.</li>
 					<li>Designing project & planning</li>
 				</ul>
+				<br/>
 				<h3>MYKNOT  pvt ltd - Internship</h3>
 				<p>SEP 2021 to MAR 2022</p>
 				<ul>
@@ -103,14 +108,12 @@
 			<div class="project">
 				<ul>
 					<li>
-						<h2>Project1</h2>
-						<p>This project is based on html
-						& used React</p>
+						<h2>AmazonClone</h2>
+						<p>This project created using HTML,CSS, REACT.JS, NODE.JS and FIREBASE</p>
 					</li>
 					<li>
-						<h2>Project2</h2>
-						<p>This project is based on html
-						& used React</p>
+						<h2>OneCourse</h2>
+						<p>This project created using HTML,CSS, REACT.JS, NODE.JS and EXPRESS.JS</p>
 					</li>
 				</ul>
 			</div>
