--- a/Resume.html
+++ b/Resume.html
@@ -61,9 +61,10 @@
 			</div>
 			<div class="Summary">
 				<h2>Summary</h2>
-				<p>To secure a challenging position in a
-				reputable organization
-					to expand my learning knowledge and skill
+				<p>
+I am B.Tech Graduate (2022) from the Information Technology Department(IT). I love doing Problem Solving based on Programming and Data Structure & Algorithm. I have an interest in Data Structure And Algorithm and web development. I Always believe in finding the Solution whatever the Problem is.
+
+
 				</p>
 			</div>
 			<div class="Experience">
@@ -79,10 +80,9 @@
 				<h3>MYKNOT  pvt ltd - Internship</h3>
 				<p>SEP 2021 to MAR 2022</p>
 				<ul>
-					<li>Actively engaged in web creative
-					design and development.</li>
-					<li>Designing project & planning</li>
-					<li>Working on designing</li>
+					<li>Led design and development of data models with API in google sheet by node.Js</li>
+					<li>• Designed and implemented algorithm to solve all customers requirement in minimal timeDesigning project & planning</li>
+					<li>• Resulted in 17 new enterprise customers with estimated 23% more growth because of this tool Designed and implemented java spring boot chat bot plugin for MyKnot official website </li>
 				</ul>
 			</div>
 			<div class="Education">
